Release v0.4.0
